--- a/style.css
+++ b/style.css
@@ -7,20 +7,13 @@
 
 body {
     background: linear-gradient(#1354A5 0%, #041832 33.33%, #041832 66.67%, #01080E 100%);
-HEAD
     height: 100vh;
-
     height: auto;
-bfe3a47 (Update)
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-HEAD
-
-
-bfe3a47 (Update)
 body::before {
     background-image: url("img/code.png");
     background-repeat: no-repeat;
@@ -31,7 +24,6 @@ body::before {
     width: 100%;
     height: 100%;
     opacity: 0.4;
-HEAD
 }
 
 .container {
@@ -41,7 +33,6 @@ HEAD
     align-items: center;
     justify-content: space-between;
     border-radius: 24px;
-
     overflow: hidden;
 }
 
@@ -52,7 +43,6 @@ HEAD
     align-items: center;
     justify-content: space-between;
     border-radius: 1.50rem;
- bfe3a47 (Update)
     border: 1px solid #1875E8;
     box-shadow: 4px 4px 20px 0px rgba(1, 8, 14, 0.15);
     background-image: url("img/Ruido.png");
@@ -66,11 +56,8 @@ HEAD
     align-items: center;
     position: absolute;
     bottom: 0;
- HEAD
-
     flex-direction: row;
     width: 100%;
- bfe3a47 (Update)
 }
 
 .container__informaciones {
@@ -79,36 +66,33 @@ HEAD
 }
 
 .container__boton {
- HEAD
     border-radius: 16px;
     background: #1875E8;
     padding: 16px 24px;
     width: 100%;
     font-size: 24px;
-
     border-radius: 1rem;
     background: #1875E8;
     padding: 1rem 1.50rem;
     width: 100%;
     font-size: 1.50rem;
- bfe3a47 (Update)
     font-weight: 700;
     border: none;
     margin-top: 2rem;
 }
- HEAD
 
 .container__boton:disabled {
     background: #898989;
+}
 
 .container__boton:hover{
     background-color: #1354A5;
     cursor: pointer;
 }
+
 .container__boton:disabled {
     background: #898989;
     cursor: auto;
-bfe3a47 (Update)
 }
 
 .container__texto {
@@ -122,25 +106,19 @@ bfe3a47 (Update)
 .container__input {
     width: 100%;
     height: 72px;
- HEAD
     border-radius: 16px;
-
     border-radius: 1rem;
- bfe3a47 (Update)
     background-color: #FFF;
     border: none;
     color: #1875E8;
     padding: 2rem;
- HEAD
     font-size: 24px;
     font-weight: 700;
     font-family: 'Inter', sans-serif;
-
     font-size: 1.50rem;
     font-weight: 700;
     font-family: 'Inter', sans-serif;
     text-align: center;
-bfe3a47 (Update)
 }
 
 .container__botones {
@@ -160,10 +138,8 @@ button {
 }
 
 .texto__parrafo {
-HEAD
     font-size: 32px;
     font-weight: 400;
-
     font-size: 2rem;
     font-weight: 400;
 }
@@ -351,6 +327,4 @@ HEAD
         width: 420px;
         height: 115px;
     }
-
- bfe3a47 (Update)
 }
